fix: sidebar close alignment

--- a/shell/shell.lit.scss
+++ b/shell/shell.lit.scss
@@ -133,6 +133,8 @@
 
             & > fa-icon
             {
+              display: block;
+              align-items: center;
               position: absolute;
               right: 5px;
               display: block;
